<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.HelpPage">
  <TextView
      android:id="@+id/helptext1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/helpText1"/>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/helptext1"
      android:layout_marginTop="20dp"
      >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helpText2"
          android:layout_column="0"
          android:layout_marginRight="10dp"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpText3"
        android:layout_column="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helpText4"
          android:layout_column="0"
          android:layout_marginRight="10dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helpText5"
          android:layout_column="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helpText6"
          android:layout_column="0"
          android:layout_marginRight="10dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/helpText7"
          android:layout_column="1" />
    </TableRow>

  </TableLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:text="@string/helpText8"
      android:textAlignment="center" />


</RelativeLayout>