<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.addCourse">

    <EditText
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/courseTitle"
        android:textAlignment="center"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/dates">

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:hint="@string/start_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:hint="@string/end_date"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveCourseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="saveNewCourse"
        android:text="@string/add_course" />

    <TextView
        android:id="@+id/TermTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dates"
        android:layout_centerHorizontal="true"
        android:text="@string/term_title"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/courseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/TermTitle"
        android:hint="@string/course_status"
        />

    <EditText
        android:id="@+id/courseNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contactInfo"
        android:layout_below="@id/courseStatus"
        android:layout_centerHorizontal="true"
        android:hint="@string/notes_placeholder"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/saveCourseButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/contactInfo">
        <EditText
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/instructor_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/contactPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/contactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>