<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.addTerm">

    <EditText
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/term_title"
        android:textAlignment="center"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/dates">

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:hint="@string/start_date"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:hint="@string/end_date"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/courseDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dates"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/termNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseDescriptionLabel"
        android:inputType="textMultiLine"
        android:maxHeight="200dp" />

    <Button
        android:id="@+id/saveCourseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_term"
        android:onClick="saveNewTerm"/>
</RelativeLayout>