<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/reportKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView
                android:id="@+id/course_item_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/event" />
            <TextView
                android:id="@+id/course_item_start"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/user"
                android:paddingHorizontal="5dp"/>
            <TextView
                android:id="@+id/course_item_end"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/time"/>
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportsList"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reportKey"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>